fix: Fix demo panel overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -215,15 +215,7 @@ a:hover {
     left: auto;
     bottom: auto;
     transform: none;
-    display: -ms-flexbox;
-    padding: 0;
-    display: flex;
-    -ms-flex-pack: center;
-        justify-content: center;
-    -ms-flex-direction: column;
-        flex-direction: column;
-    -ms-flex-align: center;
-        align-items: center;
+    padding: 0 100px;
   }
 
 
